--- a/src/COSMOSClientASP/Default.html
+++ b/src/COSMOSClientASP/Default.html
@@ -43,10 +43,12 @@
                 $('#discussion').append('<li><strong>' + encodedName
                     + '</strong>:&nbsp;&nbsp;' + encodedMsg + '</li>');
             };
+
             // Get the user name and store it to prepend to messages.
             $('#displayname').val(prompt('Enter your name:', ''));
             // Set initial focus to message input box.
             $('#message').focus();
+           // $.connection.hub.start();//.done(function () { alert("Connected"); });
             // Start the connection.
             $.connection.hub.start().done(function () {
                 $('#sendmessage').click(function () {
@@ -55,6 +57,8 @@
                     // Clear text box and reset focus for next comment.
                     $('#message').val('').focus();
                 });
+            }).fail(function (reason) {
+                console.log("SignalR connection failed: " + reason);
             });
         });
     </script>
