--- a/src/COSMOSClientASP/Default.html
+++ b/src/COSMOSClientASP/Default.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>SignalR Simple Chat</title>
+    <title>Job Dash Board</title>
     <style type="text/css">
         .container {
             background-color: #99CCFF;
@@ -13,9 +13,21 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" id="message" />
-        <input type="button" id="sendmessage" value="Send" />
-        <input type="hidden" id="displayname" />
+        <table>
+            <tr>
+                <td><label for="username">User Name:</label></td>
+                <td><input type="text" id="username" /></td>
+            </tr>
+            <tr>
+                <td><label for="password">Password:</label></td>
+                <td><input type="password" id="password" /></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><input type="button" id="login" value="Login" /></td>
+            </tr>
+
+        </table>
         <ul id="discussion"></ul>
     </div>
     <!--Script references. -->
@@ -44,23 +56,59 @@
                     + '</strong>:&nbsp;&nbsp;' + encodedMsg + '</li>');
             };
 
-            // Get the user name and store it to prepend to messages.
-            $('#displayname').val(prompt('Enter your name:', ''));
-            // Set initial focus to message input box.
-            $('#message').focus();
-           // $.connection.hub.start();//.done(function () { alert("Connected"); });
+
+            $('#username').focus();
             // Start the connection.
             $.connection.hub.start().done(function () {
-                $('#sendmessage').click(function () {
-                    // Call the Send method on the hub.
-                    chat.server.send($('#displayname').val(), $('#message').val());
-                    // Clear text box and reset focus for next comment.
-                    $('#message').val('').focus();
+                $('#login').click(function () {
+                    var connectionId = $.connection.hub.id;
+                    jQuery.support.cors = true;
+                    var loginVo = {
+                        UserName:'Admin',
+                        Password: 'p@ssw0rd'
+
+                    };
+
+                    var processContext = {
+
+                        ProcessId: connectionId,
+                        ProcessType: 'Login',
+                        TotalNumberOfMessages: 1,
+                        MessageNumber: 1,
+                        IsLastMessage: true
+
+                    };
+
+                    var serviceParams = [loginVo];
+                    var serviceMessage = {
+                        ServiceParams: serviceParams,
+                        ProcessContext: processContext
+                    };
+
+                    $.ajax({
+                        url: 'http://localhost:5052/api/COSMOS',
+                        type: 'POST',
+                        data: JSON.stringify(serviceMessage),
+                        contentType: "application/json;charset=utf-8",
+                        success: function (data) {
+                            WriteResponse(data);
+                        },
+                        error: function (x, y, z) {
+                            alert(x + '\n' + y + '\n' + z);
+                        }
+                    });
                 });
             }).fail(function (reason) {
                 console.log("SignalR connection failed: " + reason);
             });
         });
+
+        function WriteResponse(data)
+        {
+            $('#discussion').append('<li><strong>' +
+                    + '</strong>:&nbsp;&nbsp;' + data + '</li>');
+        }
+
     </script>
 </body>
 </html>
